<resources>
    <string name="app_name">Tree Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="tree_tv">TREE</string>
    <string name="map_tv">MAP</string>
    <string name="new_here_sign_up">New Here ? Sign Up</string>
    <string name="username_tv">Username</string>
    <string name="Password_tv">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="email_text">Email</string>
    <string name="add_tree_image">Add tree image</string>
    <string name="tree_name">Tree Name</string>
    <string name="tree_species">Tree Species</string>
    <string name="no_of_trees">Number of trees</string>
    <string name="get_area_location">Get geolocation</string>
    <string name="submit_text">Submit</string>
    <string name="phone_number">Phone number</string>
    <string name="save_text">Save</string>
    <string name="title_activity_maps">Tree Map</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>

    <string name="login_error">Error logging you in. Try again</string>

    // satellite titles
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="done_loading">DONE</string>
    <string name="loading">LOADING</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="section4">TODO</string>
    <string name="midsection">TODO</string>
    <string name="treemapTXT">TODO</string>
    <string name="planted_24_trees">Planted 24 trees</string>
    <string name="sectionlower">TODO</string>
    <string name="recent_arborists">Recent Arborists</string>
    <string name="plant_a_tree_make_a_change">Plant a tree, Make a change</string>
    <string name="profileIMG">TODO</string>
    <string name="go_to_map">Go to map</string>
    <string name="share_your_achievements_with_your_friends">Share your achievements with your friends</string>
    <string name="nice_work">Nice Work!</string>
    <string name="yeahIMG">TODO</string>
    <string name="shareFloat">TODO</string>
    <string name="areas_covered">Areas covered :</string>
    <string name="details">Details</string>
    <string name="john_doe">John Doe</string>
    <string name="_43">43</string>
    <string name="taita_busia_nairobi">Taita, Busia, Nairobi</string>
    <string name="total_trees_planted">Total trees planted :</string>
    <string name="target">Target :</string>
    <string name="_150_trees">150 trees</string>
    <string name="JDprofile">TODO</string>
    <string name="JDprofilesection">TODO</string>
    <string name="signout">Signout</string>
    <string name="night_mode">Night mode</string>
    <string name="help">Help</string>
    <string name="paul_mburu">Paul Mburu</string>
    <string name="paulmburu53_gmail_com">paulmburu53@gmail.com</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="tree_map">Tree Map</string>
    <string name="version_0_0_1_alpha">Version 0.0.1-alpha</string>
    <string name="support">Support</string>
    <string name="notifications">Notifications</string>
    <string name="tree_map_notifications">Tree Map notifications</string>
    <string name="loading_location_coordinates">Loading location coordinates</string>
    <string name="region_of_country_state_county">Region of Country/State/County</string>
    <string name="location_coordinates_success">Location coordinates success</string>
    <string name="mode">TODO</string>
    <string name="modeBTN">TODO</string>
    <string name="helpQ">TODO</string>
    <string name="com">TODO</string>
    <string name="todosignout">TODO</string>
    <string name="todoNotify">TODO</string>
    <string name="todout">TODO</string>
    <string name="todocom">TODO</string>
    <string name="todoTR">TODO</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Swahili</item>
    </string-array>

</resources>
