<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.tree.TreeFragment">


        <Button
            android:id="@+id/submit_new_tree_id"
            android:layout_width="92dp"
            android:layout_height="28dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_round_corners"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/submit_text"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/get_area_location_button_id" />

        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/new_tree_image_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:foregroundGravity="clip_horizontal"
            android:src="@drawable/icons8_camera_96"
            app:civ_circle_background_color="@color/colorGrayThumbi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_new_tree_image_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_horizontal"
            android:text="@string/add_tree_image"
            android:textColor="@color/colorMain"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/new_tree_image_fab"
            app:layout_constraintStart_toStartOf="@+id/new_tree_image_fab"
            app:layout_constraintTop_toBottomOf="@+id/new_tree_image_fab" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/add_new_tree_image_id"
            app:layout_constraintStart_toStartOf="@+id/add_new_tree_image_id"
            app:layout_constraintTop_toBottomOf="@+id/add_new_tree_image_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tree_name_text_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center_vertical"
                android:hint="@string/tree_name"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tree_species_text_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center_vertical"
                android:hint="@string/tree_species"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/no_of_trees__text_input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center_vertical"
                android:hint="@string/no_of_trees"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/get_area_location_button_id"
            android:layout_width="165dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_round_corners"
            android:fontFamily="@font/nunito_bold"
            android:padding="5dp"
            android:text="@string/get_area_location"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>