<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/already_have_account_sign_in_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_oak_tree_100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tree_tv"
            android:textColor="#4CAF50"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/map_tv"
            android:textSize="50sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="64dp"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:gravity="center_horizontal"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_username_singup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="24dp"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:background="@drawable/text_input_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:hint="@string/username_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_email_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="24dp"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:background="@drawable/text_input_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_username_singup_id">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:hint="@string/email_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_password_signup_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="24dp"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:background="@drawable/text_input_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinput_email_signup_id">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:hint="@string/Password_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="64dp"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:background="@drawable/button_round_corners_background"
        android:text="Button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinput_password_signup_id" />

    <TextView
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:gravity="center_horizontal"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Already have an account ? Sign in"
        android:textColor="@color/colorMain"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button_id"
        tools:layout_editor_absoluteX="72dp" />


</androidx.constraintlayout.widget.ConstraintLayout>