<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profile_image_fab_button_id"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="156dp"
        android:clickable="true"
        android:src="@drawable/icons8_plus_150"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/planted_trees_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_fab_button_id"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/planted_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Planted:"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/number_of_trees_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" 24 trees"
            android:textColor="@color/colorMain"
            android:textSize="24sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_username_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="70dp"
        android:background="@drawable/text_input_round_corners"
        app:layout_constraintTop_toBottomOf="@+id/planted_trees_id"
        tools:layout_editor_absoluteX="1dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:hint="@string/username_tv" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_input_round_corners"
        app:layout_constraintTop_toBottomOf="@+id/profile_username_id"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:hint="@string/email_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_phonenumber_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_input_round_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_id">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profile_save_button_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_margin_left_right"
        android:layout_marginRight="@dimen/fragment_margin_left_right"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_round_corners_background"
        android:text="@string/save_text"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/profile_phonenumber_id"
        tools:layout_editor_absoluteX="161dp" />
</androidx.constraintlayout.widget.ConstraintLayout>