<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/already_have_account_sign_in_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInFragment">


        <Button
            android:id="@+id/unregister_button_id"
            android:layout_width="137dp"
            android:layout_height="33dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_black_round_corners"
            android:fontFamily="@font/nunito_semibold"
            android:text="unregister"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.104"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_email_signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.781"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_username_singin_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_email_textinput_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fragment_margin_left_right"
                android:layout_marginRight="@dimen/fragment_margin_left_right"
                android:fontFamily="@font/nunito"
                android:hint="@string/email_text"
                android:textColor="#484545" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="158dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:fontFamily="@font/nunito"
            android:gravity="center_horizontal"
            android:text="welcome Back!"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#228b22"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Welcome Back!" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput_password_signup_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_email_signup_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sigin_password_textinput_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fragment_margin_left_right"
                android:layout_marginRight="@dimen/fragment_margin_left_right"
                android:fontFamily="@font/nunito"
                android:hint="@string/Password_tv"
                android:inputType="textPassword|numberPassword|textWebPassword"
                android:password="true"
                android:textColor="#484545" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_username_singin_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signin_username_textinput_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fragment_margin_left_right"
                android:layout_marginRight="@dimen/fragment_margin_left_right"
                android:fontFamily="@font/nunito"
                android:hint="@string/username_tv"
                android:textColor="#484545" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button_id"
            android:layout_width="148dp"
            android:layout_height="39dp"
            android:layout_marginLeft="@dimen/fragment_margin_left_right"
            android:layout_marginTop="32dp"
            android:layout_marginRight="@dimen/fragment_margin_left_right"
            android:background="@drawable/button_round_corners"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinput_password_signup_id"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="Don't have an account? Sign up!"
            android:textColor="@color/darkGreen"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button_id"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button_id"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button_id" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/loginpic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/error_tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_error"
            android:textColor="@color/colorError"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/textinput_password_signup_id"
            app:layout_constraintStart_toStartOf="@+id/textinput_password_signup_id"
            app:layout_constraintTop_toBottomOf="@+id/textinput_password_signup_id" />

        <ProgressBar
            android:id="@+id/progressBar_signin_id"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/sign_in_button_id"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button_id"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>